--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,7 +1,8 @@
 .Container {
     margin: 0 auto;
-    max-width: 1000px;
+    max-width: 850px;
     margin-bottom: 600px;
+    font-family: Roboto, Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 .Segment {
